# test_cmake

./: .gitignore  CMakeLists.txt
adder/: CMakeLists.txt  add.cpp
include/: common.h
include/adder/: add.h
include/mult/: mult.h
mult/: CMakeLists.txt  mult.cpp
src/: CMakeLists.txt  main.cpp
